# NSDS_MPI_tutorial

./: .gitignore  CMakeLists.txt  README.md
src/: ants_simulation_03.c
src/labinclass/: guess.c  linear_road.c  monte_carlo.c
src/labinclass_sol/: guess_solution.c  linear_road.c  linear_road_solution.c  monte_carlo_solution.c
